Added the search-maillogs.pl command-line script, with the same functionality as the web-based mail search.
Removed the 'All virtual servers are name-based' Module Config option, as this function has been superceded by support for multiple shared IP addresses (and was confusing to boot).
Added a Module Config option for a Unix group to add all domain owners to.
Added arrows to the Custom Links page to move them up and down.
Added a new section to the Custom Links page for defining categories, and menus for assiging links into categories.
Added an option in the Apache website section of the server templates for specifying a php.ini file to copy into new virtual servers' ~/etc directory, instead of the global default. This .ini file can also contain substitions like ${DOM} and ${HOME}.
Added a server template option to make virtual servers' php.ini files non-editable by the server owner.
---- Changes since 3.39 ----
Updated Gallery script installer to 1.5.6.
If a domain with the same TLD already exists as one you are creating, the automatically generated group name will be the new full domain name, to avoid clashes.
The stats web directory is now password-protected by default.
Added the list-bandwidth.pl command-line script for displaying usage by domain, date and feature.
Added script installer for Simple Machines Forum.
Added a server templates option to set the default timeout for the HTTP status monitor feature.
The number of days to keep old bandwidth data can now be configured on the Bandwidth Monitoring page.
Added the list-features.pl script, for finding available features for new virtual servers.
Updated all script installers to check for the mysql and possibly pgsql PHP modules, if needed.