@@ -27,6 +27,9 @@ foreach $i ('cn', 'o', 'issuer_cn', 'issuer_o', 'notafter', 'type') {
 		print &ui_table_row($text{'cert_'.$i}, $info->{$i});
 		}
 	}
+print &ui_table_row($text{'cert_download'},
+	"<a href='download_cert.cgi/cert.pem?dom=$in{'dom'}'>".
+	"$text{'cert_pem'}</a>");
 print &ui_table_end();
 print &ui_tabs_end_tab();
 
